# sialytics

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
notebooks/: sialytics.ipynb
src/sialytics/: __init__.py  analytics.py  export.py  models.py  parsing.py  security.py  sia.py  validation.py  workflow.py
tests/: test_analytics.py  test_notebook.py  test_parsing.py  test_security.py  test_validation_export.py  test_workflow.py
tests/fixtures/: courses.html
